corrijo segunda parte

--- a/doc/latex/Structures/Monad.tex
+++ b/doc/latex/Structures/Monad.tex
@@ -34,7 +34,7 @@
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≅ₘ\AgdaUnderscore{}}}%
-\>[11]\AgdaSymbol{:}\AgdaSpace{}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -48,7 +48,7 @@
 \\
 %
 \>[4]\AgdaField{eqₘ}%
-\>[11]\AgdaSymbol{:}\AgdaSpace{}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -57,8 +57,8 @@
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\})}\<%
 \\
 %
-\>[4]\AgdaField{return}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
+\>[4]\AgdaField{return}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -71,7 +71,7 @@
 \\
 %
 \>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≫=\AgdaUnderscore{}}}%
-\>[10]\AgdaSymbol{:}\AgdaSpace{}%
+\>[11]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
@@ -91,13 +91,13 @@
 \\
 %
 \>[4]\AgdaField{law₁}%
-\>[11]\AgdaSymbol{:}\AgdaSpace{}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}%
-\>[60I]\AgdaSymbol{→}\AgdaSpace{}%
+\>[59I]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
@@ -108,8 +108,8 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSymbol{)}\<%
 \\
-\>[60I][@{}l@{\AgdaIndent{0}}]%
-\>[28]\AgdaSymbol{→}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[59I]%
+\>[29]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(((}\AgdaField{return}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
@@ -120,7 +120,7 @@
 \\
 %
 \>[4]\AgdaField{law₂}%
-\>[11]\AgdaSymbol{:}\AgdaSpace{}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -137,14 +137,14 @@
 \\
 %
 \>[4]\AgdaField{law₃}%
-\>[11]\AgdaSymbol{:}\AgdaSpace{}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSpace{}%
-\AgdaSymbol{:}%
-\>[95I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{\}}%
+\>[95I]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
@@ -162,8 +162,8 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSymbol{)}\<%
 \\
-\>[95I][@{}l@{\AgdaIndent{0}}]%
-\>[28]\AgdaSymbol{→}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[95I]%
+\>[31]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{((}\AgdaBound{t}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSymbol{)}\AgdaSpace{}%
