--- a/doc/tex/conclusiones.tex
+++ b/doc/tex/conclusiones.tex
@@ -2,7 +2,7 @@
 
 Para realizar esta tesina se estudió en profundidad el concepto de monoides concurrentes y mónadas concurrentes, así como también los tipos coinductivos el uso de la coinducción en general para luego comprender la definición del tipo \textit{delay} y cómo este se utiliza para representar formalmente la no terminación de programas. 
 
-En este trabajo se utilizó el lenguaje y asistente de pruebas Agda para realizar formalizaciones de diversas estructuras algebraicas que ayudaron a construir la formalización de las mónadas concurrentes. Entre ellas se encuentran los monoides, las mónadas, los funtores monoidales y los monoides concurrentes. Posteriormente se analizó el caso de la mónada \textit{delay} con el objetivo de demostrar que esta es una mónada concurrente. La demostración de la ley de intercambio mostró diversas complicaciones que llevaron a tomar la decisión de simplificar el problema a los números conaturales. Al intentar demostrar la misma ley para la versión reducida del problema, se presentaron dificultades en torno al soporte para coinducción elegido. Finalmente, se decidió cambiar este soporte por otro, logrando demostrar que los conaturales forman un monoide concurrente y definiendo una mónada concurrente que tiene ciertas similitudes con la mónada \textit{delay}. 
+En este trabajo se utilizó el lenguaje y asistente de pruebas Agda para realizar formalizaciones de diversas estructuras algebraicas que ayudaron a construir la formalización de las mónadas concurrentes. Entre ellas se encuentran los monoides, las mónadas, los funtores monoidales y los monoides concurrentes. Posteriormente se analizó el caso de la mónada \textit{delay} con el objetivo de demostrar que esta es una mónada concurrente. La demostración de la ley de intercambio mostró diversas complicaciones que llevaron a tomar la decisión de simplificar el problema a los números conaturales. Al intentar demostrar la misma ley para la versión reducida del problema, se presentaron dificultades en torno al soporte para coinducción elegido. Finalmente, se decidió cambiar este soporte por otro, logrando demostrar que los conaturales forman un monoide concurrente y definiendo una mónada concurrente que comparte ciertas características con la mónada \textit{delay}. 
 
 Las principales conclusiones de este trabajo son: 
 
