--- a/doc/bib/biblio.bib
+++ b/doc/bib/biblio.bib
@@ -222,3 +222,26 @@ author = {Jesse Hughes and Bart Jacobs},
   series = {POPL '92}
 }
 
+@article{danielsson:2017,
+  author = {Nils Anders Danielsson},
+  title = {Up-to Techniques Using Sized Types},
+  year = {2017},
+  issue_date = {January 2018},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  volume = {2},
+  doi = {10.1145/3158131},
+  month = {dec},
+  articleno = {43},
+  numpages = {28},
+}
+
+@inproceedings{goncharov:2021,
+  doi = {10.4230/LIPICS.ICALP.2021.131},
+  author = {Sergey Goncharov},
+  title = {Uniform Elgot Iteration in Foundations},
+  publisher = {Schloss Dagstuhl - Leibniz-Zentrum für Informatik},
+  year = {2021},
+  copyright = {Creative Commons Attribution 4.0 International license}
+}
+
