revision ultimos capitulos

--- a/doc/tex/delay.tex
+++ b/doc/tex/delay.tex
@@ -107,12 +107,12 @@ Un \textbf{álgebra inicial} para un endofuntor $\mathit{F}$ sobre una categorí
 Una \textbf{coálgebra final} para un endofuntor $\mathit{F}$ sobre una categoría $\mathscr{C}$ es un objeto terminal en la categoría de las $\mathit{F}$-coálgebras. 
 \end{definition}
 
-Formalmente, el tipo de las listas finitas sobre $A$ es un álgebra inicial para una signatura que consiste en una constante (\texttt{nil}) y un constructor binario (\texttt{::}). El tipo de las listas finitas e infinitas sobre $A$ forman la coálgebra final de la signatura (\texttt{nil}, \texttt{::}). Los tipos coinductivos se definen como elementos de una coálgebra final para un endofuntor dado en la categoría \textbf{Set}. 
+Formalmente, el tipo de las listas finitas sobre $A$ es un álgebra inicial para una signatura que consiste en una constante (\texttt{nil}) y un constructor binario (\texttt{::}). El tipo de las listas finitas e infinitas sobre $A$ forma la coálgebra final de la signatura (\texttt{nil}, \texttt{::}). Los tipos coinductivos se definen como elementos de una coálgebra final para un endofuntor dado en la categoría \textbf{Set}. 
 
 Se muestran a continuación algunos ejemplos más presentados por Kozen y Silva en \cite{kozen:2017}.
 
 \begin{ejemplo}[Flujo de datos infinitos]
-El conjunto $A^{\omega}$ de flujos de datos infinitos sobre un alfabeto $A$ es (el conjunto soporte de) la coálgebra final del funtor $\mathit{F}X = A \times X$.
+El conjunto $A^{\omega}$ de los flujos de datos infinitos sobre un alfabeto $A$ es (el conjunto soporte de) la coálgebra final del funtor $\mathit{F}X = A \times X$.
 \end{ejemplo}
 
 \begin{ejemplo}[Cadenas infinitas]
@@ -139,7 +139,7 @@ De manera dual, la estructura de los conaturales es una coálgebra final en la c
 
 El conjunto de los números conaturales $\bar{\mathbb{N}}$ puede definirse como el máximo conjunto que cumple que $0 \in \bar{\mathbb{N}}$ y si $n \in \bar{\mathbb{N}}$ entonces $S(n) \in \bar{\mathbb{N}}$ (las mismas condiciones que los números naturales). Sin embargo, como se mencionó anteriormente, los conjuntos coinductivos suelen definirse por sus destructores en lugar de sus constructores. Esto hace que la definición sea más intuitiva y se comprenda mejor. 
 
-El dual del constructor unario $S$ es la función predecesor $P$ definida como $P(n) = n-1$, donde $P$ es una función parcial definida sólo para los números distintos de $0$, por lo cual $\mathrm{Dom}(P) = \{n \ |\  n > 0\}$. Los constructores de aridad $0$ representan elementos distinguidos del conjunto soporte, por lo que no es evidente cuáles son sus destructores correspondientes ya que no hay una componente del constructor que retornar. Para enfrentar esto, los destructores correspondientes a constructores 0-arios retornan un valor arbitrario que representa ``sin componentes''. Este puede ser denotado como $\star$ o $()$. El destructor dual al constructor 0-ario $0$ es la función parcial $is0 : \{0\} \rightarrow \{\star\}$, por lo que necesariamente $is0(0) = \star$ y $\mathrm{Dom}(is0) = \{0\}$. 
+El dual del constructor unario $S$ es la función predecesor $P$ definida como $P(n) = n-1$, donde $P$ es una función parcial definida sólo para los números distintos de $0$, por lo cual $\mathrm{Dom}(P) = \{n \ |\  n > 0\}$. Los constructores de aridad $0$ representan elementos distinguidos del conjunto soporte, por lo que no es evidente cuáles son sus destructores correspondientes ya que no hay una componente del constructor que retornar. Para enfrentar esto, los destructores correspondientes a constructores 0-arios retornan un valor arbitrario que representa ``sin componentes''. Este valor puede ser denotado como $\star$ o $()$. El destructor dual al constructor 0-ario $0$ es la función parcial $is0 : \{0\} \rightarrow \{\star\}$, por lo que necesariamente $is0(0) = \star$ y $\mathrm{Dom}(is0) = \{0\}$. 
 
 El dual de un álgebra de Peano $(\mathcal{A},z,s)$ es una coálgebra de Peano $(\mathcal{C},isz,p)$, donde $isz$ y $p$ son destructores: $isz: \mathcal{C} \nrightarrow  \{\star\}$ y $p : \mathcal{C} \nrightarrow \mathcal{C}$. Si una coálgebra tiene más de un destructor, entonces todos sus destructores son funciones parciales. Los dominios de $isz$ y $p$ forman una partición de $\mathcal{C}$, por lo que si $x \in \mathcal{C}$ entonces o bien $x \in \mathrm{Dom}(isz)$ o bien $x \in \mathrm{Dom}(p)$, pero no ambos. Los números conaturales son la coálgebra de Peano $(\bar{\mathbb{N}},is0,P)$, con la propiedad de que para cualquier coálgebra de Peano $(\mathcal{C},isz,p)$ hay una única función $g : \mathcal{C} \rightarrow \bar{\mathbb{N}}$ tal que para cada $x \in \mathcal{C}$:
 \begin{itemize}
@@ -149,7 +149,7 @@ El dual de un álgebra de Peano $(\mathcal{A},z,s)$ es una coálgebra de Peano $
 
 La coálgebra $(\bar{\mathbb{N}},is0,P)$ es entonces una coálgebra terminal o final en la categoría de las coálgebras de Peano.  
 
-Intuitivamente, un número conatural puede ser o bien el sucesor de otro (está en el dominio de la función $P$ y se puede obtener su predecesor) o bien $0$ (está en el dominio de $is0$), de manera que se evidencia el paralelismo entre ambas definiciones. La diferencia con los naturales es que, en este caso, un conatural puede ser sucesor de otro ``infinitamente'', puesto que no hay condición alguna que indique que al aplicar la función predecesor sucesivamente debe llegarse obligatoriamente a $0$. Esto da lugar a un valor especial $\infty$ tal que $P(\infty) = \infty$. El conjunto soporte $\bar{\mathbb{N}}$ sería entonces de alguna manera equivalente a $\mathbb{N} \cup \{\infty\}$. 
+Intuitivamente, un número conatural puede ser o bien el sucesor de otro (está en el dominio de la función $P$ y se puede obtener su predecesor) o bien $0$ (está en el dominio de $is0$), de manera que se evidencia el paralelismo entre ambas definiciones. La diferencia con los naturales es que, en este caso, un conatural puede ser sucesor de otro ``infinitamente'', puesto que no hay condición alguna que indique que al aplicar la función predecesor sucesivamente debe llegarse obligatoriamente a $0$. Esto da lugar a un valor especial $\infty$ tal que $P(\infty) = \infty$. Si se considera el axioma del tercero excluído, el conjunto soporte $\bar{\mathbb{N}}$ es entonces equivalente a $\mathbb{N} \cup \{\infty\}$ \cite{goncharov:2021}. 
 
 
 \section{La mónada \textit{delay}}\label{delay:delay}
@@ -203,7 +203,6 @@ El tipo \textit{delay} $\mathbf{D}$ es una mónada fuerte. La unidad $\eta$ es e
 & \mu \ (\mathtt{later} \ c) = \mathtt{later} \ (\mu \ c)
 \end{align*}
 
-
 \section{Coinducción en Agda}\label{coind:agda}
 
 Se describirán a continuación los dos soportes de coinducción en Agda que se utilizaron en esta Tesina. El primero se basa en una notación particular, la notación musical, la cual permite manejar términos potencialmente infinitos. A pesar de ser una notación práctica e intuitiva, este soporte tiene algunos problemas con el chequeo de terminación de Agda, lo que limita bastante las propiedades que pueden demostrarse usándolo. Es por eso que se utilizó luego otro enfoque, basado en tipos de tamaño limitado (\textit{sized types} en inglés), el cual ayuda al chequeo de terminación de Agda haciendo un seguimiento de la profundidad de las estructuras de datos mediante la definición de límites en la profundidad. 
@@ -218,26 +217,26 @@ El operador \textit{delay} (\AgdaDatatype{$\infty$}) se utiliza para etiquetar o
 
 \ExecuteMetaData[latex/Coind.tex]{delayforce}
 
-La función \textit{delay} (\AgdaFunction{$\sharp\_$}) toma un valor de tipo \AgdaDatatype{A} y lo devuelve suspendido dentro de un valor de tipo \AgdaDatatype{$\infty$ A}. Por el contrario, la función \textit{force} (\AgdaFunction{$\flat$}), toma un valor de tipo \AgdaDatatype{$\infty$ A} y lo desencapsula devolviendo un valor de tipo \AgdaDatatype{A}.
+La función \textit{delay} (\AgdaFunction{$\sharp\_$}) toma un valor de tipo \AgdaDatatype{A} y lo devuelve suspendido dentro de un valor de tipo \AgdaDatatype{$\infty$ A}. Por el contrario, la función \textit{force} (\AgdaFunction{$\flat$}) toma un valor de tipo \AgdaDatatype{$\infty$ A} y lo desencapsula devolviendo un valor de tipo \AgdaDatatype{A}.
 
-Los valores de tipos coinductivos pueden ser construidos usando corecursión, la cual no debe necesariamente terminar, pero sí ser productiva. Por ejemplo, el infinito puede ser difinido como se muestra a continuación.
+Los valores de tipos coinductivos pueden ser construidos usando co-recursión, la cual no debe necesariamente terminar, pero sí ser productiva. Por ejemplo, el infinito puede ser difinido como se muestra a continuación.
 
 \ExecuteMetaData[latex/Coind.tex]{inf}
 
-Como aproximación a la productividad, en el chequeo de terminación se pide que en la definición de funciones corecursivas las llamadas recursivas aparezcan bajo la aplicación directa de un construcor coinductivo. Esta restricción en general hace que programar con tipos coinductivos sea incómodo, y es por eso que se buscan técnicas alternativas para asegurar que las definiciones corecursivas estén bien definidas. 
+Como aproximación a la productividad, en el chequeo de terminación se pide que en la definición de funciones co-recursivas las llamadas recursivas aparezcan bajo la aplicación directa de un construcor coinductivo. Esta restricción en general hace que programar con tipos coinductivos sea incómodo, y es por eso que se buscan técnicas alternativas para asegurar que las definiciones co-recursivas estén bien definidas. 
 
 \subsection{\textit{Sized types}}\label{coind:agda:sized}
 
-Agda tiene un soporte nativo para \textit{sized types}. Estos son tipos que cuentan con un índice que indica el número de desencapsulamientos que pueden realizarse sobre los habitantes de este tipo. Estos índices, llamados tamaños o \textit{sizes}, asisten al chequeo de terminación evaluando que las definiciones corecursivas estén bien definidas. 
+Agda tiene un soporte nativo para \textit{sized types}. Estos son tipos que cuentan con un índice que indica el número de desencapsulamientos que pueden realizarse sobre los habitantes de este tipo. Estos índices, llamados tamaños o \textit{sizes}, asisten al chequeo de terminación evaluando que las definiciones co-recursivas estén bien definidas. 
 
-En Agda existe un tipo \AgdaPrimitiveType{Size} de tamaños y un tipo \AgdaPrimitiveType{Size<} \AgdaArgument{i} cuyos habitantes son los tamaños estrictamente menores a \AgdaArgument{i}. Si se tiene un tamaño \AgdaArgument{j} \AgdaSymbol{:} \AgdaPrimitiveType{Size<} \AgdaArgument{i}, este es forzado a ser también de tipo \AgdaPrimitiveType{Size}. La relación de orden de los tamaños es transitiva, lo que implica que si se tiene que \AgdaArgument{j} \AgdaSymbol{:} \AgdaPrimitiveType{Size<} \AgdaArgument{i} y \AgdaArgument{k} \AgdaSymbol{:} \AgdaPrimitiveType{Size<} \AgdaArgument{j}, entonces \AgdaArgument{k} \AgdaSymbol{:} \AgdaPrimitiveType{Size<} \AgdaArgument{i}. La relación de orden es, además, bien fundada, lo cual se usa para definir funciones corecursivas productivas. Existe también una operación sucesor de tamaños \AgdaFunction{$\uparrow$} y un tamaño ``infinito'' \AgdaArgument{$\infty$} tal que para cada tamaño \AgdaArgument{i}, \AgdaArgument{i} \AgdaSymbol{:} \AgdaPrimitiveType{Size<} \AgdaArgument{$\infty$}. Finalmente, un \textit{sized type} es un tipo indexado por \AgdaPrimitiveType{Size}.
+En Agda existe un tipo \AgdaPrimitiveType{Size} de tamaños y un tipo \AgdaPrimitiveType{Size<} \AgdaBound{i} cuyos habitantes son los tamaños estrictamente menores a \AgdaBound{i}. Si se tiene un tamaño \AgdaBound{j} $:$ \AgdaPrimitiveType{Size<} \AgdaBound{i}, este es forzado a ser también de tipo \AgdaPrimitiveType{Size}. La relación de orden de los tamaños es transitiva, lo que implica que si se tienen tamaños \hbox{\AgdaBound{j} $:$ \AgdaPrimitiveType{Size<} \AgdaBound{i}} y \AgdaBound{k} $:$ \AgdaPrimitiveType{Size<} \AgdaBound{j}, entonces \AgdaBound{k} $:$ \AgdaPrimitiveType{Size<} \AgdaBound{i}. La relación de orden es, además, bien fundada, lo cual se usa para definir funciones co-recursivas productivas. Existe también una operación sucesor de tamaños \AgdaFunction{$\uparrow$} y un tamaño ``infinito'' \AgdaDatatype{$\infty$} tal que para cada tamaño \AgdaBound{i}, \AgdaBound{i} $:$ \AgdaPrimitiveType{Size<} \AgdaDatatype{$\infty$}. Finalmente, un \textit{sized type} es un tipo indexado por \AgdaPrimitiveType{Size}.
 
 Para ejemplificar el uso de los \textit{sized types}, se definen a continuación los conaturales utilizando esta técnica.
 
 \ExecuteMetaData[latex/Coind.tex]{sizedconat}
 
-Ambos tipos, \AgdaDatatype{Conat} y \AgdaRecord{Conat$'$} están indexados por un tamaño \AgdaArgument{i}. Este índice debe entenderse como una cota superior del número de veces que puede aplicarse \AgdaField{force}. Más precisamente, cuando se aplica \AgdaField{force} a un \AgdaArgument{n$'$} \AgdaSymbol{:} \AgdaRecord{Conat$'$} \AgdaArgument{i}, el valor resultante es un \AgdaArgument{n} \AgdaSymbol{:} \AgdaDatatype{Conat} \AgdaArgument{j} de una profundidad estrictamente menor \AgdaArgument{j} \AgdaSymbol{<} \AgdaArgument{i}. Un caso especial es el valor \AgdaArgument{$\infty$n$'$} \AgdaSymbol{:} \AgdaRecord{Conat$'$} \AgdaArgument{$\infty$} de índice infinito, cuyo resultado de aplicar \AgdaField{force} es \AgdaArgument{$\infty$n} \AgdaSymbol{:} \AgdaDatatype{Conat} \AgdaArgument{$\infty$}, el cual también tiene índice infinito. De esta manera los tamaños establecen productividad en las definiciones recursivas. Al final, sólo interesan los valores \AgdaArgument{n} \AgdaSymbol{:} \AgdaDatatype{Conat} \AgdaArgument{$\infty$} de índice infinito.
+Ambos tipos, \AgdaDatatype{Conat} y \AgdaRecord{Conat$'$} están indexados por un tamaño \AgdaBound{i}. Este índice debe entenderse como una cota superior del número de veces que puede aplicarse \AgdaField{force}. Más precisamente, cuando se aplica \AgdaField{force} a un \AgdaBound{n$'$} $:$ \AgdaRecord{Conat$'$} \AgdaBound{i}, el valor resultante es un \AgdaBound{n} $:$ \AgdaDatatype{Conat} \AgdaBound{j} de una profundidad estrictamente menor \AgdaBound{j} $<$ \AgdaBound{i}. Un caso especial es el valor \AgdaBound{$\infty$n$'$} $:$ \AgdaRecord{Conat$'$} \AgdaDatatype{$\infty$} de índice infinito, cuyo resultado de aplicar \AgdaField{force} es \AgdaBound{$\infty$n} $:$ \AgdaDatatype{Conat $\infty$}, el cual también tiene índice infinito. De esta manera los tamaños establecen productividad en las definiciones co-recursivas. Al final, sólo interesan los valores \AgdaBound{n} $:$ \AgdaDatatype{Conat $\infty$} de índice infinito.
 
-Si una función corecursiva en \AgdaDatatype{Conat} \AgdaArgument{i} sólo se llama a sí misma con índices menores \AgdaArgument{j} \AgdaSymbol{<} \AgdaArgument{i}, se garantiza la productividad y, por lo tanto, está bien definida. En la siguiente definición del valor \AgdaFunction{infty} se muestran los argumentos implícitos de tamaño explícitamente de manera que se evidencie cómo aseguran la productividad:
+Si una función co-recursiva en \AgdaDatatype{Conat} \AgdaBound{i} sólo se llama a sí misma con índices menores \AgdaBound{j} $<$ \AgdaBound{i}, se garantiza la productividad y, por lo tanto, está bien definida. En la siguiente definición del valor \AgdaFunction{infty} se muestran los argumentos implícitos de tamaño explícitamente de manera que se evidencie cómo aseguran la productividad:
 
 \ExecuteMetaData[latex/Coind.tex]{sizedinf}
