--- a/doc/tex/conclusiones.tex
+++ b/doc/tex/conclusiones.tex
@@ -1,6 +1,6 @@
 \chapter{Conclusiones y trabajo futuro}
 
-Para realizar esta tesina se estudió en profundidad el concepto de monoides concurrentes y mónadas concurrentes, así como también los tipos coinductivos el uso de la coinducción en general para luego comprender la definición del tipo \textit{delay} y cómo este se utiliza para representar formalmente la no terminación de programas. 
+Para realizar esta tesina se estudiaron en profundidad los conceptos de monoide concurrente y mónada concurrente, así como también los tipos coinductivos y el uso de la coinducción en general para luego comprender la definición del tipo \textit{delay} y cómo este se utiliza para representar formalmente la no terminación de programas. 
 
 En este trabajo se utilizó el lenguaje y asistente de pruebas Agda para realizar formalizaciones de diversas estructuras algebraicas que ayudaron a construir la formalización de las mónadas concurrentes. Entre ellas se encuentran los monoides, las mónadas, los funtores monoidales y los monoides concurrentes. Posteriormente se analizó el caso de la mónada \textit{delay} con el objetivo de demostrar que esta es una mónada concurrente. La demostración de la ley de intercambio mostró diversas complicaciones que llevaron a tomar la decisión de simplificar el problema a los números conaturales. Al intentar demostrar la misma ley para la versión reducida del problema, se presentaron dificultades en torno al soporte para coinducción elegido. Finalmente, se decidió cambiar este soporte por otro, logrando demostrar que los conaturales forman un monoide concurrente y definiendo una mónada concurrente que comparte ciertas características con la mónada \textit{delay}. 
 
@@ -20,9 +20,9 @@ Las principales conclusiones de este trabajo son:
 \item La mónada \textit{writer} para los números conaturales constituye una mónada concurrente. La prueba \AgdaFunction{writerConatConcurrent} lo demuestra utilizando las pruebas mencionadas en los dos items anteriores. 
 \end{enumerate}
 
-Por cuestiones de tiempo y extensión de la tesina, quedaron algunas tareas pendientes para realizar más adelante. A continuación se detallan las principales:
+Por cuestiones de tiempo y extensión de la tesina, quedaron algunas tareas pendientes para realizar más adelante. A continuación se detallan las dos principales:
 \begin{enumerate}
 \item Debido a la forma en la que se realizó la formalización de las mónadas concurrentes, al generar instancias de dicha estructura uno se ve obligado a utilizar la igualdad proposicional para los tipos de retorno. A futuro podía pensarse en modificar la formalización de manera que incluya como parámetro una noción de igualdad para el tipo de retorno. Así podrían darse instancias de mónadas concurrentes donde los valores de retorno se comparen mediante otros tipos de igualdad.
 
-\item El soporte para coinducción utilizando \textit{sized types} parece más prometedor que el primero. Sería interesante intentar definir la mónada \textit{delay} utilizando una representación con dicho soporte y analizar si con esa representación se puede demostrar la ley de intercambio y, por lo tanto, probar que el tipo \textit{delay} constituye una mónada concurrente. 
+\item El soporte para coinducción utilizando \textit{sized types} parece más prometedor que el primero. Sería interesante estudiar la representación con dicho soporte de la mónada \textit{delay} definida por Danielsson \cite{danielsson:2017} y analizar si con esa representación se puede demostrar la ley de intercambio y, por lo tanto, probar que el tipo \textit{delay} constituye una mónada concurrente. 
 \end{enumerate}
