--- a/doc/tex/titlepage.tex
+++ b/doc/tex/titlepage.tex
@@ -19,9 +19,11 @@
 	
 	{\LARGE \textbf{Formalización de mónadas concurrentes en}}
 	
-	{\LARGE \textbf{Agda: el caso de la mónada
-Delay}} % Título
-	\vspace{\baselineskip} % Espacio post-título
+	{\LARGE \textbf{Agda: un análisis del caso de la mónada}}
+
+	{\LARGE \textbf{Delay}} % Título
+	
+	\vspace{0.5\baselineskip} % Espacio post-título
 	
 	\rule{\textwidth}{0.4pt}\vspace*{-\baselineskip}\vspace{3.2pt} % Línea delgada
 	\rule{\textwidth}{1.6pt} % Línea grande
